--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ chrono = { version = "0.4.38", optional = true }
 counter = "0.6.0"
 dhat = { version = "0.3.3", optional = true }
 itertools = "0.13.0"
+nom = "7.1.3"
 pico-args = "0.5.0"
 tinyjson = "2.5.1"
 
