--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,14 +20,15 @@ today = ["chrono"]
 test_lib = []
 
 [dependencies]
-
 # Template dependencies
 chrono = { version = "0.4.38", optional = true }
-counter = "0.6.0"
 dhat = { version = "0.3.3", optional = true }
-itertools = "0.13.0"
-nom = "7.1.3"
 pico-args = "0.5.0"
 tinyjson = "2.5.1"
 
 # Solution dependencies
+
+counter = { git = "https://github.com/mjclarke94/counter-rs.git", branch = "custom-hasher" }
+itertools = "0.13.0"
+rustc-hash = "2.1.0"
+nom = "7.1.3"
