--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,9 +33,5 @@ itertools = "0.13.0"
 rustc-hash = "2.1.0"
 nom = "7.1.3"
 cached = { version = "0.54.0", features = ["ahash"] }
-strum = "0.26.3"
-enum-group = "0.1.2"
-num-derive = "0.4.2"
-num-traits = "0.2.19"
 num_enum = "0.7.3"
-parse-display = "0.10.0"
+memoize = "0.4.2"
