--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,5 @@ itertools = "0.13.0"
 rustc-hash = "2.1.0"
 nom = "7.1.3"
 cached = { version = "0.54.0", features = ["ahash"] }
+num_enum = "0.7.3"
+memoize = "0.4.2"
